--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -10,7 +10,7 @@
 <header class="header">
         <nav class="navbar navbar-expand-lg fw-bold">
             <div class="container">
-                <a class="navbar-brand" href="#"><i class="bi bi-emoji-expressionless-fill fs-1"></i></a>
+                <a class="navbar-brand " href="#"><i class="bi bi-emoji-expressionless-fill fs-1"></i></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -52,10 +52,15 @@
                    </div>
                </div>
                 <div class="banner_image  ">
-                    <img class="rounded-circle" src="./../assets/images/png/banner-photo.png" alt="banner-photo.png">
+                    <img class="rounded-circle " src="./../assets/images/png/banner-photo.png" alt="banner-photo.png">
                 </div>
             </div>
         </div>
+    </section>
+
+
+    <section>
+
     </section>
 </main>
 
